# RLOX-App-Tracker

./: .editorconfig  .gitignore  AUDIT.md  CHANGELOG.md  LICENSE  README.md  build.bat  build.spec  config.py  gen_icon.py  gen_version.py  main.py  pyproject.toml  repomix-output.md  requirements-dev.txt  rthook_pywin32.py  version.py  version_info.template.txt  version_info.txt
.github/workflows/: ci.yml  nightly.yml  release.yml
app/: RLOXAppTracker.spec  requirements-dev.txt  requirements.txt
app/src/rlox_app_tracker/: __main__.py  defaults.py  metadata.py  migration.py  paths.py  version.py
app/tests/: test_migration.py  test_repository.py  test_tracker.py
core/: idle_detector.py  process_scanner.py  tracker.py  window_monitor.py
data/: database.py  models.py  repository.py
docs/: ARCHITECTURE.md  MIGRATION.md  RELEASE.md  SECURITY.md  TESTING.md  UPDATE_PROTOCOL.md
installer/: RLOXAppTracker.iss
installer/scripts/: cleanup_versions.iss  migrate_legacy.iss
launcher/src/: launcher.py
launcher/src/RLOXLauncher/: AppLauncher.cs  AppPaths.cs  AutostartManager.cs  HashVerifier.cs  Logger.cs  (+9 more)
launcher/tests/: RLOXLauncher.Tests.csproj  SemVersionTests.cs
release/: install.json  manifest.schema.json
services/: autostart.py  config_manager.py  reporter.py  update_worker.py  updater.py  watchlist.py
ui/: dashboard_view.py  main_window.py  settings_view.py  style.py  theme.py  watchlist_view.py
ui/components/: app_icons.py  app_item_delegate.py  bar_chart.py  empty_state.py  fade_stack.py  legend.py  pause_banner.py  stat_card.py
utils/: logger.py
(+30 files in other folders)
