[project]
name = "rlox-app-tracker"
version = "2.0.0-dev"
description = "Time tracking app for Windows"
authors = [{ name = "RusLOX" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "psutil>=5.9",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pillow>=10.0",
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
